# convex-doctor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-23-convex-doctor-design.md  2026-02-23-convex-doctor-impl.md  2026-02-24-new-rules-impl.md
npm/: bin.js  install.js  package.json
reference/convex/: coverage_matrix.toml
scripts/: update-convex-guidance.sh
src/: config.rs  diagnostic.rs  engine.rs  lib.rs  main.rs  project.rs  scoring.rs
src/reporter/: cli.rs  json.rs  mod.rs
src/rules/: architecture.rs  client.rs  configuration.rs  context.rs  correctness.rs  mod.rs  performance.rs  schema.rs  security.rs
tests/: analyzer_test.rs  arch_rules_test.rs  client_rules_test.rs  config_test.rs  convex_guidance_matrix_test.rs  convex_guidance_rules_test.rs  correctness_rules_test.rs  diagnostic_test.rs  e2e_test.rs  engine_test.rs  main_cli_test.rs  new_arch_rules_test.rs  new_correctness_rules_test.rs  new_perf_rules_test.rs  perf_rules_test.rs  project_test.rs  reporter_test.rs  rules_test.rs  schema_rules_test.rs  scoring_test.rs  security_rules_test.rs  tier1_correctness_rules_test.rs  tier1_perf_rules_test.rs  tier1_security_rules_test.rs  tier2_arch_rules_test.rs  tier3_config_rules_test.rs  tier3_schema_rules_test.rs  visitor_extensions_test.rs
tests/fixtures/: bad_patterns.ts  basic_query.ts  direct_function_ref.ts  first_call_patterns.ts  multi_export_declarators.ts  old_syntax.ts  perf_patterns.ts  runtime_import_issues.ts  runtime_use_node_browser_import.ts  schema_many_indexes.ts  schema_many_optional.ts  schema_patterns.ts  use_node.ts  (+3 more)
(+2 files in other folders)
