[package]
name = "convex-doctor"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
description = "Diagnose your Convex backend for anti-patterns, security issues, and performance problems"
license = "MIT"
repository = "https://github.com/nooesc/convex-doctor"
homepage = "https://github.com/nooesc/convex-doctor"
readme = "README.md"
keywords = ["convex", "linter", "static-analysis", "typescript"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
oxc_allocator = "0.115"
oxc_parser = "0.115"
oxc_ast = "0.115"
oxc_ast_visit = "0.115"
oxc_span = "0.115"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
glob = "0.3"
semver = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
